# deductive_reasoning_framework

./: LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/deductive_ai/: app.py  data_management.py  hyperparameter_tuning.py  inference_validation.py  login.py
app/deductive_ai/.steamlit/: config.toml
app/deductive_ai/engine/: confidence_model.py  deductive_engine.py  hyperparameter_tuning.py  text_to_rdf.py
app/deductive_ai/experimental/: find_related.py
app/deductive_ai/tests/: test_confidence_adjuster.py  test_deductive_reasoning.py
app/deductive_ai/utils/: authentication.py  file_utils.py  rdf_utils.py
